docs/_results/run1/hpctoolkit/logs/hpctoolkit-2021.05.15-memkind-experiment.err
==> Warning: memkind-1.10.0-ts5ebnjtfx4jkik6jaajyxsxyscwbdqr failed to install
==> Error: memkind-1.10.0-ts5ebnjtfx4jkik6jaajyxsxyscwbdqr: Package was not installed
==> Warning: memkind-1.9.0-kqy3c6k77ejxq5sqjkz3zhw5w2i3lg66 failed to install
==> Error: memkind-1.9.0-kqy3c6k77ejxq5sqjkz3zhw5w2i3lg66: Package was not installed
==> Warning: memkind-1.8.0-velx4xpejyznrmxtzr7vgugshmy2svjg failed to install
==> Error: memkind-1.8.0-velx4xpejyznrmxtzr7vgugshmy2svjg: Package was not installed
Making predictions for symbolator
Making predictions for libabigail
Making predictions for actual
/var/spool/slurmd/job100439/slurm_script: line 12: 39017 Killed                  spliced splice --package hpctoolkit@2021.05.15 --splice memkind --runner spack --replace memkind --experiment experiment --outfile /p/vast1/build/spliced-experiment/results/hpctoolkit/2021.05.15/memkind/experiment.json
==> Error: ProcessError: Command exited with status 2:
    'make' '-j16' 'V=1'

9 errors found in build log:
     6      libtoolize: putting macros in AC_CONFIG_MACRO_DIRS, 'm4'.
     7      libtoolize: copying file 'm4/libtool.m4'
     8      libtoolize: copying file 'm4/ltoptions.m4'
     9      libtoolize: copying file 'm4/ltsugar.m4'
     10     libtoolize: copying file 'm4/ltversion.m4'
     11     libtoolize: copying file 'm4/lt~obsolete.m4'
  >> 12     configure.ac:39: installing './ar-lib'
  >> 13     configure.ac:39: installing './compile'
  >> 14     configure.ac:44: installing './config.guess'
  >> 15     configure.ac:44: installing './config.sub'
  >> 16     configure.ac:35: installing './install-sh'
  >> 17     configure.ac:35: installing './missing'
     18     Makefile.am: installing './depcomp'
     19     parallel-tests: installing './test-driver'
     20     ==> memkind: Executing phase: 'configure'
     21     ==> [2022-03-03-00:48:42.675423] './configure' '--prefix=/p/vast1/b
            uild/spack/opt/spack/linux-rhel7-broadwell/gcc-10.2.1/memkind-1.10.
            0-ts5ebnjtfx4jkik6jaajyxsxyscwbdqr'
     22     checking for a BSD-compatible install... /usr/bin/install -c
     23     checking whether build environment is sane... yes

     ...

     713    libtool: link: /p/vast1/build/spack/lib/spack/env/gcc/g++ -std=c++1
            1 -fvisibility=hidden -Wall -Werror -D_GNU_SOURCE -DJE_PREFIX=jemk_
             -g -O2 -Wl,-z -Wl,relro -Wl,-z -Wl,now -o examples/.libs/memkind_a
            llocated examples/memkind_allocated_example.o  ./.libs/libmemkind.s
            o -ldl -lrt -lnuma -pthread -Wl,-rpath -Wl,/p/vast1/build/spack/opt
            /spack/linux-rhel7-broadwell/gcc-10.2.1/memkind-1.10.0-ts5ebnjtfx4j
            kik6jaajyxsxyscwbdqr/lib
     714    depbase=`echo examples/memkind_cpp_allocator.o | sed 's|[^/]*$|.dep
            s/&|;s|\.o$||'`;\
     715    /p/vast1/build/spack/lib/spack/env/gcc/g++ -std=c++11 -DHAVE_CONFIG
            _H -I.  -I./include -I./jemalloc/include -Itest/gtest_fused -DMEMKI
            ND_DEPRECATED\(x\)=x  -fvisibility=hidden -Wall -Werror -D_GNU_SOUR
            CE -DJE_PREFIX=jemk_ -g -O2 -MT examples/memkind_cpp_allocator.o -M
            D -MP -MF $depbase.Tpo -c -o examples/memkind_cpp_allocator.o examp
            les/memkind_cpp_allocator.cpp &&\
     716    mv -f $depbase.Tpo $depbase.Po
     717    In file included from examples/memkind_cpp_allocator.cpp:34:
     718    ./include/memkind_allocator.h: In constructor 'libmemkind::static_k
            ind::allocator<T>::allocator(libmemkind::kinds)':
  >> 719    ./include/memkind_allocator.h:144:36: error: 'runtime_error' is not
             a member of 'std'
     720      144 |                         throw std::runtime_error("Unknown l
            ibmemkind::kinds");
     721          |                                    ^~~~~~~~~~~~~
  >> 722    make[1]: *** [examples/memkind_cpp_allocator.o] Error 1
     723    make[1]: Leaving directory `/tmp/sochat1/spack-stage/spack-stage-me
            mkind-1.10.0-ts5ebnjtfx4jkik6jaajyxsxyscwbdqr/spack-src'
  >> 724    make: *** [all] Error 2

See build log for details:
  /var/tmp/sochat1/spack-stage/spack-stage-memkind-1.10.0-ts5ebnjtfx4jkik6jaajyxsxyscwbdqr/spack-build-out.txt

Making predictions for spack-test
Making predictions for symbolator
Making predictions for libabigail
abicompat not found on path, will look for spack instead.
Making predictions for actual
